--- a/.github/workflows/test-oidc.yml
+++ b/.github/workflows/test-oidc.yml
@@ -2,8 +2,8 @@ name: Test OIDC Connection
 
 on:
   workflow_dispatch:  # Manual trigger for testing
-  push:
-    branches: [main]
+  # push:
+  #   branches: [main]
 
 permissions:
   id-token: write   # Required for OIDC
