--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,18 +1,11 @@
-﻿FROM python:3.11-slim
-
+﻿FROM python:3.11-slim as builder
 WORKDIR /app
-
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/app
-
 COPY requirements.txt .
+RUN pip install --user -r requirements.txt
 
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
-
+FROM python:3.11-slim
+WORKDIR /app
+COPY --from=builder /root/.local /root/.local
 COPY main.py .
-
-EXPOSE 8000
-
+ENV PATH=/root/.local/bin:$PATH
 CMD ["fastapi", "run", "main.py", "--port", "8000"]
